// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Content Bucket 2 Slice Slice matches snapshot at \`lg\` breakpoint 1`] = `
<DocumentFragment>
  <div
    class="css-1sr0a1l"
  >
    <div
      class="css-zry7cx"
    >
      <div
        class="css-ezq1rc"
        data-testid="article-container"
      >
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="European cup winner Mihajlovic dies aged 53 after battle with leukaemia"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-1g58ijf"
              >
                <div
                  class="css-gb5m6n"
                >
                  UPDATED
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-btda8w"
              >
                <div
                  class="css-gb5m6n"
                >
                  PROFILE
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                </span>
              </span>
            </a>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-5iyysz"
          data-testid="divider"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="‘American owners pose threat to English pyramid’"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-1g58ijf"
              >
                <div
                  class="css-gb5m6n"
                >
                  EXCLUSIVE
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-btda8w"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  ‘American owners pose threat to English pyramid’
                </span>
              </span>
            </a>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-5iyysz"
          data-testid="divider"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="£60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-1g58ijf"
              >
                <div
                  class="css-gb5m6n"
                >
                  UPDATED
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-btda8w"
              >
                <div
                  class="css-gb5m6n"
                >
                  Q&A
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                </span>
              </span>
            </a>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="css-5iyysz"
          data-testid="divider"
        />
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-1kwj960"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="Blow for rebel clubs as court says Uefa can block Super League"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-1g58ijf"
              >
                <div
                  class="css-gb5m6n"
                >
                  EXCLUSIVE
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-btda8w"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Blow for rebel clubs as court says Uefa can block Super League
                </span>
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Content Bucket 2 Slice Slice matches snapshot at \`xs\` breakpoint 1`] = `
<DocumentFragment>
  <div
    class="css-1sr0a1l"
  >
    <div
      class="css-zry7cx"
    >
      <div
        class="css-ezq1rc"
        data-testid="article-container"
      >
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-uxw9nr"
          >
            <picture
              class="css-zp0elg"
            >
              <div
                class="css-5pczz7"
              />
              <img
                alt="European cup winner Mihajlovic dies aged 53 after battle with leukaemia"
                class="css-1qgqq71"
                src="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fbde50bea-247f-11ee-8c1b-d5d52b458fbd.jpg?crop=3844%2C2563%2C188%2C173"
              />
            </picture>
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-i1f2uq"
            >
              <span
                class="css-1g58ijf"
              >
                <div
                  class="css-gb5m6n"
                >
                  UPDATED
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-btda8w"
              >
                <div
                  class="css-gb5m6n"
                >
                  PROFILE
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-1g58ijf"
              >
                <div
                  class="css-gb5m6n"
                >
                  EXCLUSIVE
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-btda8w"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  ‘American owners pose threat to English pyramid’
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-1g58ijf"
              >
                <div
                  class="css-gb5m6n"
                >
                  UPDATED
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-btda8w"
              >
                <div
                  class="css-gb5m6n"
                >
                  Q&A
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                </span>
              </span>
            </a>
          </div>
        </div>
        <div
          class="css-1nw1nne"
        >
          <div
            class="css-tj8oo8"
          >
            <hr
              aria-hidden="true"
              class="css-1i1gqyx"
              data-testid="divider"
            />
          </div>
          <div
            class="css-17cghxi"
          >
            <div
              class="css-122i4mv"
            >
              <span
                class="css-1g58ijf"
              >
                <div
                  class="css-gb5m6n"
                >
                  EXCLUSIVE
                </div>
              </span>
              <div
                class="css-lew009"
              >
                <hr
                  aria-hidden="true"
                  class="css-15kf7hd"
                  data-testid="divider"
                />
              </div>
              <span
                class="css-btda8w"
              >
                <div
                  class="css-gb5m6n"
                >
                  REVIEW
                </div>
              </span>
            </div>
            <a
              class="css-17mo6gr"
              href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
              role="link"
            >
              <span
                class="css-17x5lw"
              >
                <span
                  class="css-65zrxz"
                >
                  Blow for rebel clubs as court says Uefa can block Super League
                </span>
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
